# apkshadow

./: .gitignore  pyproject.toml
ExtractPermissions/: README.md
apkshadow/: cache.py  cli.py  cmdrunner.py  filters.py  globals.py  parser.py  utils.py
apkshadow/actions/: analyze.py  decompile.py  install.py  list.py  pull.py
apkshadow/analysis/: collector.py  component.py  finding.py  renderer.py
extractPermissions/: AndroidManifest.xml  Extract.py
